--- a/Reetesh_Nigam.ipynb
+++ b/Reetesh_Nigam.ipynb
@@ -2306,16 +2306,19 @@
    "outputs": [],
    "source": [
     "def draw_histplot(chart_data,title):\n",
+    "    \"\"\" This method will draw histplot based on chart data and title\"\"\"\n",
     "    plt.figure(figsize=(15,5))\n",
     "    sns.histplot(chart_data, kde=True)\n",
     "    plt.title(f'Distribution of {title}')\n",
     "    plt.show()\n",
     "\n",
     "def draw_boxplot(chart_data,title):\n",
+    "    \"\"\" This method will draw boxplot based on chart data and title\"\"\"\n",
     "    sns.boxplot(chart_data, orient='h', )\n",
     "    plt.title(title)\n",
     "\n",
     "def draw_countplot(chart_data,x_cols, order, title):\n",
+    "    \"\"\" This method will draw countplot based on chart data and title\"\"\"\n",
     "    plt.figure(figsize=(15,5))\n",
     "    sns.countplot(x=x_cols, data=chart_data, order=order)\n",
     "    plt.title(title)\n",
@@ -2362,10 +2365,6 @@
    ],
    "source": [
     "## Distribution plot\n",
-    "# plt.figure(figsize=(15,5))\n",
-    "# sns.histplot(filtered_data['loan_amnt'], kde=True)\n",
-    "# plt.title('Distribution of Loan Amount')\n",
-    "# plt.show()\n",
     "draw_histplot(filtered_data['loan_amnt'],'Distribution of Loan Amount')\n",
     "\n"
    ]
@@ -2446,9 +2445,7 @@
    ],
    "source": [
     "## Distribution plot\n",
-    "# sns.histplot(filtered_data['funded_amnt'], kde=True)\n",
-    "# plt.title('Funded Loan Amount')\n",
-    "# plt.show()\n",
+    "\n",
     "draw_histplot(filtered_data['funded_amnt'],'Funded Loan Amount')"
    ]
   },
@@ -2526,9 +2523,7 @@
     }
    ],
    "source": [
-    "# sns.histplot(filtered_data['funded_amnt_inv'], kde=True)\n",
-    "# plt.title('Funded Loan Amount By Investors')\n",
-    "# plt.show()\n",
+    "\n",
     "draw_histplot(filtered_data['funded_amnt_inv'],'Funded Loan Amount By Investors')"
    ]
   },
@@ -2663,8 +2658,7 @@
     }
    ],
    "source": [
-    "#sns.boxplot(filtered_data['annual_inc'], orient='h', )\n",
-    "#plt.title(\"Annual income box plot\")\n",
+    "\n",
     "draw_boxplot(filtered_data['annual_inc'],\"Annual income box plot\")"
    ]
   },
@@ -2774,8 +2768,7 @@
     }
    ],
    "source": [
-    "# sns.boxplot(filtered_data['annual_inc'], orient='h', )\n",
-    "# plt.title(\"Annual Income Distribution\")\n",
+    "\n",
     "draw_boxplot(filtered_data['annual_inc'],\"Annual income box plot\")"
    ]
   },
@@ -2806,9 +2799,7 @@
     }
    ],
    "source": [
-    "# sns.histplot(filtered_data['annual_inc'], kde=True)\n",
-    "# plt.title(\"Annual Income Frequency distribution\")\n",
-    "# plt.show()\n",
+    "\n",
     "draw_histplot(filtered_data['annual_inc'],\"Annual Income Frequency distribution\")"
    ]
   },
@@ -2863,10 +2854,7 @@
     }
    ],
    "source": [
-    "# plt.figure(figsize=(15,5))\n",
-    "# sns.countplot(x='grade', data=filtered_data[filtered_data['loan_status']=='Charged Off'], order=['A','B','C','D','E','F','G'])\n",
-    "# plt.title(\"Loan Grade Analysis\")\n",
-    "# plt.show()\n",
+    "\n",
     "draw_countplot(filtered_data[filtered_data['loan_status']=='Charged Off'],\"grade\", ['A','B','C','D','E','F','G'], \"Loan Grade Analysis\")"
    ]
   },
@@ -2917,11 +2905,6 @@
     "## Filtering the unique sub-grades\n",
     "keys = filtered_data['sub_grade'].value_counts().to_dict().keys()\n",
     "## Plotting the chart\n",
-    "# plt.figure(figsize=(15,5))\n",
-    "# sns.countplot(x='sub_grade', data=filtered_data[filtered_data['loan_status']=='Charged Off'], order=sorted(keys))\n",
-    "# plt.title(\"Sub-Grade Distribution (Charged off)\")\n",
-    "# plt.show()\n",
-    "\n",
     "draw_countplot(filtered_data[filtered_data['loan_status']=='Charged Off'],\"sub_grade\", sorted(keys), \"Sub-Grade Distribution (Charged off)\")"
    ]
   },
@@ -2969,10 +2952,7 @@
     }
    ],
    "source": [
-    "# plt.figure(figsize=(15,5))\n",
-    "# sns.countplot(x='emp_length', data=filtered_data[filtered_data['loan_status']=='Charged Off'])\n",
-    "# plt.title(\"Employment Length (Charged off)\")\n",
-    "# plt.show()\n",
+    "\n",
     "draw_countplot(filtered_data[filtered_data['loan_status']=='Charged Off'],\"emp_length\", filtered_data[filtered_data['loan_status']=='Charged Off'][\"emp_length\"].value_counts().to_dict().keys(), \"Employment Length (Charged off)\")"
    ]
   },
@@ -3073,9 +3053,7 @@
     }
    ],
    "source": [
-    "# sns.countplot(x='verification_status', data=filtered_data[filtered_data['loan_status']=='Charged Off'])\n",
-    "# plt.title(\"Verification Status (Charged Off)\")\n",
-    "# plt.show()\n",
+    "\n",
     "\n",
     "draw_countplot(filtered_data[filtered_data['loan_status']=='Charged Off'], 'verification_status', filtered_data[filtered_data['loan_status']=='Charged Off'][\"verification_status\"].value_counts().to_dict().keys(), \"Verification Status (Charged Off)\")"
    ]
@@ -3377,10 +3355,7 @@
     }
    ],
    "source": [
-    "# plt.figure(figsize=(15,5))\n",
-    "# sns.countplot(x='open_acc', data=filtered_data[filtered_data['loan_status']=='Charged Off'])\n",
-    "# plt.title('Open Credeit Lines Distribution')\n",
-    "# plt.show()\n",
+    "\n",
     "\n",
     "draw_countplot(filtered_data[filtered_data['loan_status']=='Charged Off'], \"open_acc\", filtered_data[filtered_data['loan_status']=='Charged Off'][\"open_acc\"].value_counts().to_dict().keys(), 'Open Credeit Lines Distribution')\n"
    ]
@@ -3420,10 +3395,7 @@
     }
    ],
    "source": [
-    "# plt.figure(figsize=(15,5))\n",
-    "# sns.countplot(x='total_acc', data=filtered_data[filtered_data['loan_status']=='Charged Off'])\n",
-    "# plt.title('Credit lines in borrower credit file')\n",
-    "# plt.show()\n",
+    "\n",
     "\n",
     "draw_countplot(filtered_data[filtered_data['loan_status']=='Charged Off'], \"total_acc\", filtered_data[filtered_data['loan_status']=='Charged Off'][\"total_acc\"].value_counts().to_dict().keys(), 'Credit lines in borrower credit file')\n"
    ]
@@ -3463,9 +3435,7 @@
     }
    ],
    "source": [
-    "# plt.title('Public Derogatory Records')\n",
-    "# sns.countplot(x='pub_rec', data=filtered_data[filtered_data['loan_status']=='Charged Off'])\n",
-    "# plt.show()\n",
+    "\n",
     "draw_countplot(filtered_data[filtered_data['loan_status']=='Charged Off'], \"pub_rec\", filtered_data[filtered_data['loan_status']=='Charged Off'][\"pub_rec\"].value_counts().to_dict().keys(), 'Public Derogatory Records')\n"
    ]
   },
